# tauri-plugin-midi

./: .gitignore  Cargo.toml
example/src-tauri/: Cargo.toml
guest-js/: bindings.ts  index.ts
src/: lib.rs  polyfill.js
