[package]
name = "tauri-plugin-midi"
links = "tauri-plugin-midi"
description = "A WebMIDI-compatible plugin for Tauri"
license = "MIT"
version = "0.1.5"
authors = ["Brendan Allan", "Oscar Beaumont"]
edition = "2021"
rust-version = "1.60"
include = ["/src", "/build.rs", "/permissions", "/LICENSE", "/README.md"]
repository = "https://github.com/specta-rs/tauri-plugin-midi"
documentation = "https://docs.rs/tauri-plugin-midi"
keywords = ["tauri", "midi", "webmidi", "tauri-plugin"]
categories = ["web-programming"]

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
midir = "0.10"
serde = "1"
specta = "=2.0.0-rc.22"
tauri = "2"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive"] }
tokio = { version = "1.29.1", features = ["time"] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
coremidi-hotplug-notification = "0.1.3"

[dev-dependencies]
tauri-specta = { version = "=2.0.0-rc.21", features = ["typescript"] }
specta-typescript = { version = "0.0.9" }

[build-dependencies]
tauri-plugin = { version = "2.0.0-rc.13", features = ["build"] }
