[package]
name = "tauri-plugin-midi"
links = "tauri-plugin-midi"
description = "A WebMIDI-compatible plugin for Tauri"
license = "MIT"
version = "0.1.5"
authors = ["Brendan Allan", "Oscar Beaumont"]
edition = "2021"
rust-version = "1.60"
include = ["/src", "/build.rs", "/permissions", "/LICENSE", "/README.md"]
repository = "https://github.com/specta-rs/tauri-plugin-midi"
documentation = "https://docs.rs/tauri-plugin-midi"
keywords = ["tauri", "midi", "webmidi", "tauri-plugin"]
categories = ["web-programming"]

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
midir = "0.11"
serde = "1"
specta = "=2.0.0-rc.24"
tauri = "2"
# Pinned to git rev on `main` because the published 2.0.0-rc.24 generates an incorrect Tauri plugin
# command prefix (`plugin|name|cmd` instead of `plugin:name|cmd`). Fixed upstream in
# https://github.com/specta-rs/tauri-specta/commit/28cb1496a912d3b7c8908e67c6e670ea2b9d1047 but not
# yet released. Switch back to crates.io once 2.0.0-rc.25+ ships.
tauri-specta = { git = "https://github.com/specta-rs/tauri-specta", rev = "28cb1496a912d3b7c8908e67c6e670ea2b9d1047", features = ["derive"] }
tokio = { version = "1.52", features = ["time"] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
coremidi = "0.9"

[dev-dependencies]
tauri-specta = { git = "https://github.com/specta-rs/tauri-specta", rev = "28cb1496a912d3b7c8908e67c6e670ea2b9d1047", features = ["typescript"] }
specta-typescript = { version = "0.0.11" }

[build-dependencies]
tauri-plugin = { version = "2.5", features = ["build"] }
