[package]
name = "tauri-plugin-midi-example"
version = "0.0.0"
description = "A Tauri App"
authors = ["Oscar Beaumont"]
edition = "2021"
publish = false

[lib]
name = "tauri_plugin_midi_example_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-midi = { path = "../../" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
